--- a/api-login/package.json
+++ b/api-login/package.json
@@ -16,22 +16,23 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/bcrypt": "5.0.2",
+    "@types/boom": "7.3.5",
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "1.9.9",
     "@types/node": "22.0.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "eslint": "^9.8.0",
-    "globals": "^15.8.0",
+    "morgan": "1.10.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "5.5.4",
-    "typescript-eslint": "^7.18.0"
+    "typescript": "5.5.4"
   },
   "dependencies": {
+    "@hapi/boom": "10.0.1",
     "@prisma/client": "^5.17.0",
     "bcrypt": "5.1.1",
     "cors": "^2.8.5",
