--- a/api-login/package.json
+++ b/api-login/package.json
@@ -19,6 +19,7 @@
     "@types/boom": "7.3.5",
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "1.9.9",
     "@types/node": "22.0.0",
@@ -39,6 +40,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
