--- a/api-login/package.json
+++ b/api-login/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@hapi/boom": "10.0.1",
     "@prisma/client": "^5.17.0",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -43,6 +44,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
